--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -22,7 +22,8 @@
     <ClCompile Include="src\PalmEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\PalmEngine.h" />
+    <ClInclude Include="src\SingletonManager.h" />
+    <ClInclude Include="src\SimulationManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
