Added AppSystem to control initialization, updating and shutdown of subsystems, Added ISubsystem interface for every subsystem to implement

--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,11 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\AppSystem.cpp" />
     <ClCompile Include="src\PalmEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\SingletonManager.h" />
-    <ClInclude Include="src\SimulationManager.cpp" />
+    <ClInclude Include="src\InputSystem.cpp" />
+    <ClInclude Include="src\ISubsystem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
