--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,12 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\AppSystem.cpp" />
+    <ClCompile Include="src\AppSystem\AppSystem.cpp" />
+    <ClCompile Include="src\InputSystem\InputSystem.cpp" />
     <ClCompile Include="src\PalmEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\InputSystem.cpp" />
-    <ClInclude Include="src\ISubsystem.h" />
+    <ClInclude Include="src\AppSystem\AppSystem.h" />
+    <ClInclude Include="src\InputSystem\InputListener.h" />
+    <ClInclude Include="src\InputSystem\InputSystem.h" />
+    <ClInclude Include="src\SystemManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
