--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,15 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\AppSystem\AppSystem.cpp" />
     <ClCompile Include="Source\InputSystem\InputSystem.cpp" />
     <ClCompile Include="Source\PalmEngine.cpp" />
     <ClCompile Include="Source\SystemManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\AppSystem\AppSystem.h" />
-    <ClInclude Include="Source\InputSystem\InputListener.h" />
+    <ClInclude Include="Source\MessageSystem\MessageSystem.h" />
     <ClInclude Include="Source\InputSystem\InputSystem.h" />
+    <ClInclude Include="Source\MessageSystem\MessageSystemNode.h" />
     <ClInclude Include="Source\SystemManager.h" />
   </ItemGroup>
   <ItemGroup>
