--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\InputSystem\Input.cpp" />
     <ClCompile Include="Source\RenderingSystem\RenderSystem.cpp" />
     <ClCompile Include="Source\InputSystem\InputSystem.cpp" />
     <ClCompile Include="Source\PalmEngine.cpp" />
     <ClCompile Include="Source\SystemManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\InputSystem\Input.h" />
     <ClInclude Include="Source\RenderingSystem\RenderSystem.h" />
     <ClInclude Include="Source\MessageSystem\MessageSystem.h" />
     <ClInclude Include="Source\InputSystem\InputSystem.h" />
