--- a/PalmEngine.vcxproj.filters
+++ b/PalmEngine.vcxproj.filters
@@ -15,44 +15,38 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Palm_Client.cpp">
+    <ClCompile Include="src\palm_client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\InputSystem\InputSystem.cpp">
+    <ClCompile Include="src\InputSystem\CInputSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\ISystem.cpp">
+    <ClCompile Include="src\CSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RenderingSystem\RenderSystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\InputSystem\InputMapper.cpp">
+    <ClCompile Include="src\InputSystem\InputMapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\ISystem.h">
+    <ClInclude Include="src\CSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\InputSystem\InputSystem.h">
+    <ClInclude Include="src\InputSystem\CInputSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\MessageSystem\MessageSystem.h">
+    <ClInclude Include="src\InputSystem\InputMapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\MessageSystem\MessageSystemNode.h">
+    <ClInclude Include="src\SystemEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\RenderingSystem\RenderSystem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\InputSystem\InputMapper.h">
+    <ClInclude Include="src\ISubSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
-    <None Include="README.md" />
+    <None Include="doc\README.md" />
   </ItemGroup>
 </Project>
