--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,17 +19,23 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\GUI\Panel.cpp" />
+    <ClCompile Include="src\GUI\GuiSystem.cpp" />
+    <ClCompile Include="src\InputSystem\InputCollector.cpp" />
     <ClCompile Include="src\InputSystem\InputMapper.cpp" />
-    <ClCompile Include="src\InputSystem\CInputSystem.cpp" />
-    <ClCompile Include="src\palm_client.cpp" />
-    <ClCompile Include="src\CSystem.cpp" />
+    <ClCompile Include="src\InputSystem\InputSystem.cpp" />
+    <ClCompile Include="src\Palm_Client.cpp" />
+    <ClCompile Include="src\SystemHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GUI\Panel.h" />
+    <ClInclude Include="src\GUI\GuiSystem.h" />
+    <ClInclude Include="src\InputSystem\InputCollector.h" />
     <ClInclude Include="src\InputSystem\InputMapper.h" />
-    <ClInclude Include="src\InputSystem\CInputSystem.h" />
-    <ClInclude Include="src\ISubSystem.h" />
-    <ClInclude Include="src\CSystem.h" />
+    <ClInclude Include="src\InputSystem\InputSystem.h" />
+    <ClInclude Include="src\ISystem.h" />
     <ClInclude Include="src\SystemEvent.h" />
+    <ClInclude Include="src\SystemHandler.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
