--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -20,25 +20,26 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\GUI\Panel.cpp" />
-    <ClCompile Include="src\GUI\GuiSystem.cpp" />
-    <ClCompile Include="src\InputSystem\InputCollector.cpp" />
-    <ClCompile Include="src\InputSystem\InputMapper.cpp" />
-    <ClCompile Include="src\InputSystem\InputSystem.cpp" />
+    <ClCompile Include="src\GUI\GUI.cpp" />
+    <ClCompile Include="src\Input\InputCollector.cpp" />
+    <ClCompile Include="src\Input\InputMapper.cpp" />
+    <ClCompile Include="src\Input\InputSystem.cpp" />
     <ClCompile Include="src\Palm_Client.cpp" />
     <ClCompile Include="src\SystemHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GUI\Panel.h" />
-    <ClInclude Include="src\GUI\GuiSystem.h" />
-    <ClInclude Include="src\InputSystem\InputCollector.h" />
-    <ClInclude Include="src\InputSystem\InputMapper.h" />
-    <ClInclude Include="src\InputSystem\InputSystem.h" />
+    <ClInclude Include="src\GUI\GUI.h" />
+    <ClInclude Include="src\Input\InputCollector.h" />
+    <ClInclude Include="src\Input\InputMapper.h" />
+    <ClInclude Include="src\Input\InputSystem.h" />
     <ClInclude Include="src\ISystem.h" />
     <ClInclude Include="src\SystemEvent.h" />
     <ClInclude Include="src\SystemHandler.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include="doc\Info.md" />
     <None Include="doc\README.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
