--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,25 +19,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\GUI\Panel.cpp" />
-    <ClCompile Include="src\GUI\GUI.cpp" />
-    <ClCompile Include="src\Input\InputCollector.cpp" />
-    <ClCompile Include="src\Input\InputMapper.cpp" />
-    <ClCompile Include="src\Input\InputSystem.cpp" />
+    <ClCompile Include="src\gui\gui_controls\Panel.cpp" />
+    <ClCompile Include="src\gui\GuiSystem.cpp" />
+    <ClCompile Include="src\input\InputCollector.cpp" />
+    <ClCompile Include="src\input\InputMapper.cpp" />
+    <ClCompile Include="src\input\InputSystem.cpp" />
     <ClCompile Include="src\Palm_Client.cpp" />
     <ClCompile Include="src\SystemHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\GUI\GUI.fwd.h" />
-    <ClInclude Include="src\GUI\Panel.h" />
-    <ClInclude Include="src\GUI\GUI.h" />
-    <ClInclude Include="src\Input\InputCollector.h" />
-    <ClInclude Include="src\Input\InputMapper.h" />
-    <ClInclude Include="src\Input\InputSystem.fwd.h" />
-    <ClInclude Include="src\Input\InputSystem.h" />
+    <ClInclude Include="src\gui\gui_controls\Panel.h" />
+    <ClInclude Include="src\gui\GuiSystem.h" />
+    <ClInclude Include="src\input\InputCollector.h" />
+    <ClInclude Include="src\input\InputMapper.h" />
+    <ClInclude Include="src\input\InputSystem.h" />
     <ClInclude Include="src\ISystem.h" />
-    <ClInclude Include="src\SystemEvent.h" />
-    <ClInclude Include="src\SystemHandler.fwd.h" />
+    <ClInclude Include="src\CSystemEvent.h" />
     <ClInclude Include="src\SystemHandler.h" />
   </ItemGroup>
   <ItemGroup>
