--- a/PalmEngine.vcxproj.filters
+++ b/PalmEngine.vcxproj.filters
@@ -83,7 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
-    <None Include="doc\README.md" />
+    <None Include="src\README.md" />
     <None Include="doc\Info.md" />
   </ItemGroup>
 </Project>
