--- a/PalmEngine.vcxproj
+++ b/PalmEngine.vcxproj
@@ -19,28 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\debug\Logger.cpp" />
     <ClCompile Include="src\graphics\gui_controls\EditablePanel.cpp" />
     <ClCompile Include="src\graphics\gui_controls\Frame.cpp" />
     <ClCompile Include="src\Modules.cpp" />
     <ClCompile Include="src\graphics\gui_controls\Panel.cpp" />
     <ClCompile Include="src\graphics\GraphicModule.cpp" />
-    <ClCompile Include="src\input\C_InputCollector.cpp" />
-    <ClCompile Include="src\input\C_InputMapper.cpp" />
+    <ClCompile Include="src\input\InputCollector.cpp" />
+    <ClCompile Include="src\input\InputMapper.cpp" />
     <ClCompile Include="src\input\InputModule.cpp" />
     <ClCompile Include="src\Palm_Client.cpp" />
     <ClCompile Include="src\ModuleManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\debug\Logger.h" />
     <ClInclude Include="src\graphics\gui_controls\EditablePanel.h" />
     <ClInclude Include="src\graphics\gui_controls\Frame.h" />
     <ClInclude Include="src\Modules.h" />
     <ClInclude Include="src\graphics\gui_controls\Panel.h" />
     <ClInclude Include="src\graphics\GraphicModule.h" />
-    <ClInclude Include="src\input\C_InputCollector.h" />
-    <ClInclude Include="src\input\C_InputMapper.h" />
+    <ClInclude Include="src\input\InputCollector.h" />
+    <ClInclude Include="src\input\InputMapper.h" />
     <ClInclude Include="src\input\InputModule.h" />
     <ClInclude Include="src\IModule.h" />
-    <ClInclude Include="src\C_ModuleEvent.h" />
+    <ClInclude Include="src\ModuleEvent.h" />
     <ClInclude Include="src\ModuleManager.h" />
   </ItemGroup>
   <ItemGroup>
@@ -148,8 +150,9 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>Default</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <ShowIncludes>false</ShowIncludes>
+      <AdditionalIncludeDirectories>./include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
